work in progress

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     </li>
 
     <li>
-        <img width="200" class="logo" alt="Angular Logo" src="/assets/img/logosea.png">
+        <img width="200" class="logo" alt="Angular Logo" src="https://github.com/stp94/untitled1/blob/master/docs/assets/img/logosea.png">
     </li>
 
 
