work in progress

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     </li>
 
     <li>
-        <img width="200" class="logo" alt="Angular Logo" src="https://github.com/stp94/untitled1/blob/master/docs/assets/img/logosea.png">
+        <img width="200" class="logo" alt="Angular Logo" src="https://raw.githubusercontent.com/stp94/untitled1/master/docs/assets/img/logosea.png">
     </li>
 
 
@@ -45,6 +45,13 @@
         <li>
           <button (click)="searchRiver()" mat-button class="searchButton"> Szukaj! </button>
         </li>
+
+      <li>
+        <p>Źródłem pochodzenia danych jest Instytut Meteorologii i Gospodarki Wodnej – Państwowy Instytut Badawczy
+          </p>
+      </li>
+    <li><p>Dane Instytutu Meteorologii i Gospodarki Wodnej – Państwowego Instytutu Badawczego zostały przetworzone</p></li>
+
 
       </ul>
 
